@@ -100,6 +100,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 10326) AJAX-based page watching and unwatching has been cleaned up and
   enabled by default.
 * Added option to install to MyISAM
+* (bug 9250) Remove hardcoded minimum image name length of three characters
 
 == Bugfixes since 1.10 ==
 
